--- a/index.html
+++ b/index.html
@@ -7,15 +7,91 @@
 </head>
 <body>
 	<header>
+		<section>
+			<div>
+				<img src="res/images/me.png" alt="My picture">
+			</div>
+			<div>
+				<ul>
+					<li>John Doe</li>
+					<li>27/06/1993</li>
+					<li>Software Engineering</li>
+				</ul>
+			</div>
+			<div>
+				<strong>2.65</strong>
+			</div>
+		</section>
+		<section>
+			<h1>Courses</h1>
+			<table>
+				<thead>
+					<tr>
+					<th>#</th>
+					<th>Course Title</th>
+					<th>Semester</th>
+					<th>Grade</th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr>
+					<td>1</td>
+					<td><a href="https://courses.cs.ut.ee/2019/asd/fall"target="_blank">Agile software development</a></td>
+					<td>1</td>
+					<td>82</td>
+				</tr>
+				<tr>
+					<td>2</td>
+					<td><a href="https://courses.cs.ut.ee/2019/SM/fall"target="_blank">System modeling</a></td>
+					<td>1</td>
+					<td>85</td>
+				</tr>
+				<tr>
+					<td>3</td>
+					<td><a href="https://courses.cs.ut.ee/2019/OOP/spring"target="_blank">Object-oriented programming</a></td>
+					<td>2</td>
+					<td>99</td>
+				</tr>
+				<tr>
+					<td>4</td>
+					<td>Estonian language Level A2</td>
+					<td>2</td>
+					<td>65</td>
+				</tr>
+				</tbody>
+				<tfoot>
+					<td></td>
+					<th> Grade average </th>
+					<td></td>
+					<td>82.75</td>
+				</tfoot>
+			</table>
+		</section>
+		<form action="/index" method="post">
+			Course number:<br>
+			<input type="number" Cnumber=" Course number" value="5">
+			<br>
+			Course Title:<br>
+			<input type="text" CourseTitle = "Course Title" value ="">
+			<br>
+			Semester:<br>
+			<input type="number" SemesterNumber = "Semester Number" value="">
+			<br>
+			Grade:<br>
+			<input type="number" Grade = "Grade" value="">
+			<br><br>
+			<input type="submit" value="Submit">
+		</form>
+		
 		<strong>Welcome to your dashboard!</strong>
 	</header>
 	<footer>
 	<ul>
 		<li>
-			<a href="https://ois2.ut.ee/">OIS</a>
+			<a href="https://ois2.ut.ee/"target="_blank">OIS</a>
 		</li>
 		<li>
-			<a href="https://courses.cs.ut.ee/">Courses</a>
+			<a href="https://courses.cs.ut.ee/"target="_blank">Courses</a>
 		</li>
 	</ul>
 	</footer>
